--- a/documentation/demos/demo30/fonts.html
+++ b/documentation/demos/demo30/fonts.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div style="font-family: 'Righteous'; float:left; width:1px; height: 0;">&nbsp;</div>
+<div style="font-family: 'Baumans'; float:left; width:1px; height: 0;">&nbsp;</div>
 
 <div id="page">
     <div id="header">
@@ -63,7 +63,50 @@
 </body>
 
 <script type="text/javascript" src="../menu/menu.js"></script>
-<script type="text/javascript" src="../../../build/caat.js"></script>
+
+<script src="../../../src/CAAT.js"></script>
+<script src="../../../src/core/class.js"></script>
+<script src="../../../src/math/affinetransform2D.js"></script>
+<script src="../../../src/math/color.js"></script>
+<script src="../../../src/math/rectangle.js"></script>
+<script src="../../../src/math/bezier.js"></script>
+<script src="../../../src/math/point.js"></script>
+<script src="../../../src/math/quadtree.js"></script>
+<script src="../../../src/math/dimension.js"></script>
+<script src="../../../src/path/interpolator.js"></script>
+<script src="../../../src/behaviour/behaviour.js"></script>
+<script src="../../../src/behaviour/csskeyframehelper.js"></script>
+<script src="../../../src/core/browserdetect.js"></script>
+<script src="../../../src/model/debug.js"></script>
+<script src="../../../src/model/actor.js"></script>
+<script src="../../../src/model/audio.js"></script>
+<script src="../../../src/model/extraActor.js"></script>
+<script src="../../../src/model/director.js"></script>
+<script src="../../../src/model/mouseevent.js"></script>
+<script src="../../../src/model/conpoundimage.js"></script>
+<script src="../../../src/model/imagepreloader.js"></script>
+<script src="../../../src/model/timer.js"></script>
+<script src="../../../src/model/scene.js"></script>
+<script src="../../../src/modules/modules.js"></script>
+<script src="../../../src/modules/CircleManager/PackedCircle.js"></script>
+<script src="../../../src/modules/CircleManager/PackedCircleManager.js"></script>
+<script src="../../../src/modules/LocalStorage/LocalStorage.js"></script>
+<script src="../../../src/modules/ImageUtil/ImageUtil.js"></script>
+<script src="../../../src/modules/Layout/layout.js"></script>
+<script src="../../../src/modules/Font/font.js"></script>
+<script src="../../../src/modules/Inspector/inspector.js"></script>
+<script src="../../../src/path/interpolatoractor.js"></script>
+<script src="../../../src/path/path.js"></script>
+<script src="../../../src/path/pathactor.js"></script>
+<script src="../../../src/texture/plasma.js"></script>
+<script src="../../../src/webgl/ShaderUtil.js"></script>
+<script src="../../../src/webgl/glu.js"></script>
+<script src="../../../src/webgl/glTexturePage.js"></script>
+<script src="../../../src/ui/namespace.js"></script>
+<script src="../../../src/ui/layoutManager.js"></script>
+<script src="../../../src/ui/checkbox.js"></script>
+<script src="../../../src/ui/label.js"></script>
+
 <script type="text/javascript" src="../templates/startup-wo-splash/template.js"></script>
 
 <script type="text/javascript">
@@ -123,7 +166,7 @@
             var fill_sp="#f00";
             var fill_c="#0f0";
             var fs= 50;
-            var fontname="'Righteous'"
+            var fontname="'Baumans'"
             //var fontname="sans-serif"
 
             var font= new CAAT.Font().
