* Proper retina support. * Added some missing backward compatibility alias constructor classes.

--- a/documentation/demos/demo1/path_org.html
+++ b/documentation/demos/demo1/path_org.html
@@ -179,10 +179,10 @@
                 var root = new CAAT.Foundation.UI.Dock().
                         initialize(scene).
                         setBounds(
-                            director.canvas.width - (j + 1) * max,
+                            director.width - (j + 1) * max,
                             0,
                             max,
-                            director.canvas.height).
+                            director.height).
                         setSizes(min, max).
                         setApplicationRange(3).
                         setLayoutOp(CAAT.Foundation.UI.Dock.OP_LAYOUT_RIGHT);
