--- a/documentation/demos/demo2/fishpond_org.html
+++ b/documentation/demos/demo2/fishpond_org.html
@@ -87,6 +87,9 @@ CAAT.DEBUG=1;
 
         function load() {
             CAAT.ModuleManager.
+
+                debug(true).
+
                 baseURL( "../../../src/").
                 setModulePath("CAAT.Core",              "Core").
                 setModulePath("CAAT.Math",              "Math").
