--- a/documentation/demos/demo4/coordinates_org.html
+++ b/documentation/demos/demo4/coordinates_org.html
@@ -194,8 +194,8 @@
 
                 var p = new CAAT.Foundation.ActorContainer().
                     setBounds(
-                        Math.random() * director.canvas.width,
-                        Math.random()* director.canvas.height,
+                        Math.random() * director.width,
+                        Math.random()* director.height,
                         s,
                         s).
                     setRotation( Math.PI*2*Math.random() ).
