--- a/documentation/tutorials/t4-6.html
+++ b/documentation/tutorials/t4-6.html
@@ -45,7 +45,7 @@
                 the new conditions, either by conforming its size, or by scaling accordingly.
             </p>
             <p>
-                The resize values are defined in CAAT.Director.prototype and are the following:
+                The resize values are defined in CAAT.Foundation.Director and are the following:
                 <ul>
                     <li>RESIZE_WIDTH, only conforms director's width.
                     <li>RESIZE_HEIGHT, only conforms director's height.
