--- a/documentation/demos/demo5/text-on-path_org.html
+++ b/documentation/demos/demo5/text-on-path_org.html
@@ -147,7 +147,7 @@
             // actor de path para poder verlo y manipularlo
             var pa = new CAAT.PathActor().
                     setPath(p).
-                    setBounds(0, 0, director.canvas.width, director.canvas.height).
+                    setBounds(0, 0, director.width, director.height).
                     setFillStyle( "#aaf").
                     setInteractive(true);
             scene.addChild(pa);
