--- a/documentation/demos/demo30/fonts.html
+++ b/documentation/demos/demo30/fonts.html
@@ -4,7 +4,7 @@
 <head>
     <script src="../../track.js" type="text/javascript"></script>
 
-    <title>CAAT example: Actors across a Path and Interpolators</title>
+    <title>CAAT example: Google Fonts</title>
 
     <link rel="stylesheet" href="../style/demo.css">
     <link href='http://fonts.googleapis.com/css?family=Fresca|Baumans|Righteous|Voltaire' rel='stylesheet' type='text/css'>
