--- a/documentation/demos/demo31/sprites.html
+++ b/documentation/demos/demo31/sprites.html
@@ -92,7 +92,11 @@
 
         function load() {
             CAAT.ModuleManager.
+
+                    debug(true).
+
                     baseURL("../../../src/").
+
                     setModulePath("CAAT.Core",              "Core").
                     setModulePath("CAAT.Math",              "Math").
                     setModulePath("CAAT.Behavior",          "Behavior").
