--- a/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_Foundation_Box2D_B2DBodyActor.js.html
+++ b/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_Foundation_Box2D_B2DBodyActor.js.html
@@ -11,9 +11,9 @@
 <span class='line'>  4</span> </span><span class="WHIT">        </span><span class="STRN">"Lib/Box2dWeb-2.1.a.3.js"</span><span class="PUNC">,</span><span class="WHIT">
 <span class='line'>  5</span> </span><span class="WHIT">        </span><span class="STRN">"CAAT.Foundation.Actor"</span><span class="WHIT">
 <span class='line'>  6</span> </span><span class="WHIT">    </span><span class="PUNC">]</span><span class="PUNC">,</span><span class="WHIT">
-<span class='line'>  7</span> </span><span class="WHIT">    </span><span class="NAME">extendsClass</span><span class="PUNC">:</span><span class="STRN">"CAAT.Foundation.Actor"</span><span class="PUNC">,</span><span class="WHIT">
-<span class='line'>  8</span> </span><span class="WHIT">    </span><span class="NAME">extendsWith</span><span class="PUNC">:</span><span class="KEYW">function</span><span class="WHIT"> </span><span class="PUNC">(</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
-<span class='line'>  9</span> 
+<span class='line'>  7</span> </span><span class="WHIT">    </span><span class="NAME">aliases</span><span class="WHIT"> </span><span class="PUNC">:</span><span class="WHIT"> </span><span class="PUNC">[</span><span class="STRN">"CAAT.B2DBodyActor"</span><span class="PUNC">]</span><span class="PUNC">,</span><span class="WHIT">
+<span class='line'>  8</span> </span><span class="WHIT">    </span><span class="NAME">extendsClass</span><span class="PUNC">:</span><span class="STRN">"CAAT.Foundation.Actor"</span><span class="PUNC">,</span><span class="WHIT">
+<span class='line'>  9</span> </span><span class="WHIT">    </span><span class="NAME">extendsWith</span><span class="PUNC">:</span><span class="KEYW">function</span><span class="WHIT"> </span><span class="PUNC">(</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
 <span class='line'> 10</span> 
 <span class='line'> 11</span> </span><span class="WHIT">        </span><span class="NAME">CAAT.PMR</span><span class="WHIT"> </span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NUMB">64</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'> 12</span> </span><span class="WHIT">        </span><span class="COMM">/**
